--- a/testing.html
+++ b/testing.html
@@ -79,6 +79,44 @@
 </div>
 <!-- <img src="images/profile.png" alt="profile photo" class="center"> -->
 
+
+<div class="profile_career_area">
+    <svg xmlns="http://www.w3.org/2000/svg" width="1750" height="200" version="1.1" viewBox="0 0 1750 200" class ="profile_career_bar">
+        <text x="650.77197" y="423.37579" style="fill:#000000;font-size:66.667px" xml:space="preserve"><tspan x="650.77197" y="423.37579"/></text>
+        <text x="237.46077" y="76.309502" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="237.46077" y="76.309502" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Customer Support Specialist</tspan></text>
+        <text x="574.97266" y="76.35833" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="574.97266" y="76.35833" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Data Analyst Certification</tspan></text>
+        <text x="866.5144" y="63.755795" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="866.5144" y="63.755795" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Data Fullstack</tspan><tspan x="866.5144" y="90.609192" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Master 1 degree</tspan></text>
+        <text x="1141.9551" y="75.97747" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="1141.9551" y="75.97747" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Data Engineer training</tspan></text>
+        <text x="1499.8821" y="78.218681" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="1499.8821" y="78.218681" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">AWS Solution Architect certification</tspan></text>
+        <circle cx="72.557" cy="105.55" r="18.7" style="fill:#fff"/>
+        <circle cx="414.6" cy="105.55" r="18.7" style="fill:#fff"/>
+        <circle cx="738.12" cy="105.55" r="18.7" style="fill:#fff"/>
+        <circle cx="995.54" cy="105.55" r="18.7" style="fill:#fff"/>
+        <rect x="103.7" y="102.91" width="279.76" height="5.2737" style="stroke-width:.74679"/>
+        <rect x="445.74" y="102.91" width="261.24" height="5.2737" style="stroke-width:.72166"/>
+        <rect x="769.79" y="102.91" width="194.6" height="5.2737" style="stroke-width:.62284"/>
+        <rect x="1026.7" y="102.91" width="228.98" height="5.2737" style="stroke-width:.67563"/>
+        <rect x="1317.9" y="102.91" width="364.39" height="5.2737" style="stroke-width:.85229"/>
+        <circle cx="1286.8" cy="105.55" r="18.7" style="fill:#fff"/>
+        <text x="72.36689" y="150.88922" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="72.36689" y="150.88922">2008</tspan></text>
+        <text x="414.87524" y="150.88922" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="414.87524" y="150.88922">2021</tspan></text>
+        <text x="737.98743" y="150.88922" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="737.98743" y="150.88922">2022</tspan></text>
+        <text x="995.39905" y="150.88922" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="995.39905" y="150.88922">2022</tspan></text>
+        <text x="1286.6617" y="150.88922" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="1286.6617" y="150.88922">2022</tspan></text>
+        <text x="237.83076" y="138.94237" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="237.83076" y="138.94237" style="fill:#6441a5;font-family:'Noto Sans JP'">Blizzard</tspan></text>
+        <text x="575.30261" y="138.94237" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="575.30261" y="138.94237" style="fill:#6441a5;font-family:'Noto Sans JP'">Wild Code School</tspan></text>
+        <text x="867.27441" y="136.78236" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="867.27441" y="136.78236" style="fill:#6441a5;font-family:'Noto Sans JP'">Jedha Bootcamp</tspan></text>
+        <text x="1143.0051" y="136.78236" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="1143.0051" y="136.78236" style="fill:#6441a5;font-family:'Noto Sans JP'">Jedha Bootcamp</tspan></text>
+        <text x="1498.202" y="138.73238" style="fill:#000000;font-size:20px;paint-order:normal;text-align:center;text-anchor:middle" xml:space="preserve"><tspan x="1498.202" y="138.73238" style="fill:#6441a5;font-family:'Noto Sans JP'">Data Scientest</tspan></text>
+        <path d="m66.969 123.18c-7.9562-2.4101-14.078-12.466-12.55-20.614 0.77717-4.1427 4.3594-9.6004 8.1379-12.399 3.5209-2.6074 11.168-3.5106 16.058-1.8966 4.8603 1.604 10.988 8.42 11.89 13.224 2.5927 13.82-10.296 25.696-23.536 21.685z" style="fill:#5f80e8;paint-order:normal;stroke-width:1.0578"/>
+        <path d="m409.39 123.06c-4.237-1.1967-8.9744-5.2892-11.317-9.776-2.2238-4.2599-1.4231-14.503 1.4352-18.357 10.513-14.178 33.077-6.9296 33.137 10.645 0.0289 8.4459-5.2437 15.326-13.503 17.62-4.5503 1.2637-4.8231 1.26-9.7523-0.13214z" style="fill:#5f80e8;paint-order:normal;stroke-width:1.0578"/>
+        <path d="m732.13 122.93c-11.719-3.741-16.073-19.564-8.0177-29.137 8.1497-9.6854 23.957-8.1177 29.813 2.9568 5.7137 10.805 0.50815 23.222-11.084 26.442-4.6543 1.2926-5.9399 1.2612-10.711-0.26183z" style="fill:#5f80e8;paint-order:normal;stroke-width:1.0578"/>
+        <path d="m989.78 122.75c-7.9187-2.8234-12.34-8.9934-12.312-17.181 0.0477-13.905 14.936-22.72 26.858-15.903 6.0908 3.4829 8.3518 7.1381 8.8731 14.344 0.6836 9.4504-4.2802 16.748-13.005 19.121-5.2062 1.4156-5.3957 1.4086-10.414-0.38072z" style="fill:#5f80e8;paint-order:normal;stroke-width:1.0578"/>
+        <path d="m1280.7 122.81c-5.2965-1.9517-7.9995-4.4598-10.37-9.6227-3.4855-7.5902-2.0339-15.218 3.9628-20.825 9.5378-8.9178 23.516-6.0256 29.073 6.0153 2.485 5.3842 2.4697 9.4403-0.056 15.004-3.7079 8.167-14.18 12.534-22.609 9.4282z" style="fill:#5f80e8;paint-order:normal;stroke-width:1.0578"/>
+       </svg>
+
+</div>
+
 <p id="my_projects"></p>
 
 
