--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
         <p><br><br>
             Currently a student in Data Analysis, Engineering and Science. I will finish my diploma "Concepteur-développeur en Science des données" in July. This will be followed by an AWS Solution Architect associate certification in August.
         </p>
-
-
     </div>
-
-
-
 </div>
-<img src="images/profile.png" alt="profile photo" class="center">
+
+<div class="profile_career_area">
+    {% include career_bar.html %}
+</div>
+
 <!--Presentation div-->
 <!--Presentation div-->
 <!--Presentation div-->
