--- a/testing.html
+++ b/testing.html
@@ -20,7 +20,9 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 <!--Navigation Bar-->
+
 <h5>Hi, I'm Bérenger</h5>
+
 <p id="about_me"></p>
 
 <nav>
@@ -67,12 +69,13 @@
     <div class="box">
         <img src="images/test5.jpg" alt="profile photo" />
 
-        <p><br><br>
-            I am a Data Analyst.
-            <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in March.
-        </p>
-
+        <div class ="presentation_text_box">
+            <h3>Data Analyst/Engineer</h3>
+            <div class="underline"></div>
+            <p>
+                My role is to help companies to gather and analyze their data. I can extract, store, clean and display data in a clear way for your business needs.
+            </p>
+        </div>
         
 
     </div>
