--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 <!--Presentation div-->
 
 
+<div class="profile_career_area"></div>
+{% include career_bar.html %}
+</div>
 <!--Project area div-->
 {% include projects_area.html %}
 <!--Project area div-->
