--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <!--Presentation div-->
 <!--Presentation div-->
 
-<div class="profile_career_area"></div>
-{% include career_bar.html %}
+<div class="profile_career_area">
+    {% include career_bar.html %}
 </div>
 
 <!--Project area div-->
