--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>Data Analyst/Engineer</h3>
             <div class="underline"></div>
             <p>
-                My role is to help companies to gather and analyze their data. I can extract, store, clean and display data in a clear way for your business needs.
+                My role consist of helping companies to gather and analyze their data. I can extract, store, clean and display data in a meaningful way.
             </p>
         </div>
     </div>
