--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="images/test5.jpg" alt="profile photo" />
 
         <div class ="presentation_text_box">
-            <h3>Data Analyst/Engineer</h3>
+            <h3>Data Engineer/Analyst</h3>
             <div class="underline"></div>
             <p>
                 My role consists of helping companies to gather and analyze their data. I can extract, store, clean and display data in a meaningful way.
