--- a/testing.html
+++ b/testing.html
@@ -76,6 +76,17 @@
                 My role is to help companies to gather and analyze their data. I can extract, store, clean and display data in a clear way for your business needs.
             </p>
         </div>
+
+        <div class ="tech_stack_box">
+            <h3>Tech stack</h3>
+            <div class="underline"></div>
+            <p>
+                Python - SQL - Tableau - Power BI - AWS S3 - Redshift - Elastic Beanstalk - Fast API - Scrapy - Beautiful Soup - Docker - Kubernetes - MLFlow...
+
+            </p>
+        </div>
+
+
     </div>
 </div>
 <!-- <img src="images/profile.png" alt="profile photo" class="center"> -->
