--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                 My role consists of helping companies to gather and analyze their data. I can extract, store, clean and display data in a meaningful way.
             </p>
         </div>
+
+        <div class ="tech_stack_box">
+            <h3>Tech stack</h3>
+            <div class="underline"></div>
+            <p>
+                Python - SQL - Tableau - Power BI - Metabase - AWS S3 - Redshift - Elastic Beanstalk - Fast API - Scrapy - Beautiful Soup - Docker - Kubernetes - MLFlow...
+
+            </p>
+        </div>
+
+
     </div>
 </div>
 
