--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>Data Engineer | Analyst</h3>
             <div class="underline"></div>
             <p>
-                My role consists of helping companies to gather and analyze their data. I can extract, store, clean and display data in a meaningful way so they can take informed decisions based on data.
+                My role consists of helping companies to gather and analyze their data. I can extract, store, clean and display data in a meaningful way to take informed decisions based on data.
             </p>
         </div>
 
