--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--Presentation div-->
 <!--Presentation div-->
 
-<svg width="2560" height="1340" id="svg" viewBox="0 0 1440 700" xmlns="http://www.w3.org/2000/svg" class="presentation_svg"><defs><linearGradient id="gradient" x1="92%" y1="23%" x2="8%" y2="77%"><stop offset="5%" stop-color="#5f80e8ff"></stop><stop offset="95%" stop-color="#6441a5ff"></stop></linearGradient></defs><path d="M 0,700 C 0,700 0,350 0,350 C 112.66666666666663,280.26666666666665 225.33333333333326,210.53333333333333 407,227 C 588.6666666666667,243.46666666666667 839.3333333333335,346.1333333333333 1023,381 C 1206.6666666666665,415.8666666666667 1323.3333333333333,382.93333333333334 1440,350 C 1440,350 1440,700 1440,700 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 350)"></path></svg>
+<svg width="auto" height="1340" id="svg" viewBox="0 0 1440 700" xmlns="http://www.w3.org/2000/svg" class="presentation_svg"><defs><linearGradient id="gradient" x1="92%" y1="23%" x2="8%" y2="77%"><stop offset="5%" stop-color="#5f80e8ff"></stop><stop offset="95%" stop-color="#6441a5ff"></stop></linearGradient></defs><path d="M 0,700 C 0,700 0,350 0,350 C 112.66666666666663,280.26666666666665 225.33333333333326,210.53333333333333 407,227 C 588.6666666666667,243.46666666666667 839.3333333333335,346.1333333333333 1023,381 C 1206.6666666666665,415.8666666666667 1323.3333333333333,382.93333333333334 1440,350 C 1440,350 1440,700 1440,700 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 350)"></path></svg>
 
 <div class="presentation_area">
     <div class="box">
