--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Tech stack</h3>
             <div class="underline"></div>
             <p>
-                Python - SQL - Tableau - Power BI - Metabase - AWS S3 - Redshift - Elastic Beanstalk - Fast API - Scrapy - Beautiful Soup - Docker - MLFlow...
+                Python - SQL - Tableau - Power BI - Metabase - AWS S3 - RDS - Elastic Beanstalk - Fast API - Scrapy - Beautiful Soup - Docker - MLFlow - Kubernetes
 
             </p>
         </div>
