--- a/bloc-1.html
+++ b/bloc-1.html
@@ -30,7 +30,7 @@
             <br><br>
             <a href="https://github.com/BerengerQueune/Concepteur-developpeur-en-science-des-donnees/tree/main/Bloc-1-Construction-et-alimentation-d'une-infrastructure-de-gestion-de-donnees" target="_blank">Link to Github repository</a>
             <br>
-            Tech stack: <span class="highlightme">AWS S3</span>, <span class="highlightme">AWS Redshift</span>, <span class="highlightme">Scrapy - Beautiful Soup</span>, <span class="highlightme">API</span>, <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">SQL</span>, <span class="highlightme">SQL Alchemy</span>
+            Tech stack: <span class="highlightme">AWS S3</span>, <span class="highlightme">AWS RDS</span>, <span class="highlightme">Scrapy - Beautiful Soup</span>, <span class="highlightme">API</span>, <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">SQL</span>, <span class="highlightme">SQL Alchemy</span>
             <br><br>
             From a list of the 35 most touristic French cities, I made API requests to gather their weather data and GPS coordinate. Once done, I scrapped data from <span class="highlightme">Booking.com</span> to find the 20 most popular hotels for each cities. I then saved all these information in a CSV file and stored it in an Amazon S3 Datalake. After that, I have extracted and modified the Data to save it in a <span class="highlightme">PostgreSQL Redshift Datawarehouse</span>. Finally, I made SQL queries to request the data and create a visualisation on a map.
             <br><br>
